Moved all source code to pymeddx folder. Fixed relative paths in localization and database files.

--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,8 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/linux,windows,python,pycharm,git,visualstudiocode
+
+
+scripts/
+pymeddx/database/*
+pymeddx/logs/*
