--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,10 @@ matplotlib==3.9.2
 numpy==2.0.2
 packaging==24.1
 pandas==2.2.3
+pandas-flavor==0.6.0
+patsy==1.0.1
 pillow==11.0.0
+pingouin==0.5.5
 plotly==5.24.1
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
@@ -19,10 +22,14 @@ pytz==2024.2
 regex==2024.9.11
 scikit-learn==1.5.2
 scipy==1.13.1
+seaborn==0.13.2
 six==1.16.0
 SQLAlchemy==2.0.36
+statsmodels==0.14.4
+tabulate==0.9.0
 tenacity==9.0.0
 threadpoolctl==3.5.0
 typing_extensions==4.12.2
 tzdata==2024.2
+xarray==2024.11.0
 zipp==3.20.2
