--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ patsy==1.0.1
 pillow==11.0.0
 pingouin==0.5.5
 plotly==5.24.1
+pydicom==2.4.4
 pyparsing==3.2.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
